# SurGU.AI_404team_6_22_43

./: docker-compose.yml
back/: .env  Dockerfile  clean.sh  docker-compose.yml  pyproject.toml  run_all.sh  run_all2.sh
back-ai/: .env  Dockerfile  pyproject.toml
back-ai/app/: main.py  schemas_ai.py
back-ai/app/api/v1/: api.py
back-ai/app/api/v1/endpoints/: ai.py
back-ai/app/core/: config.py
back-ai/app/services/: parser.py  rag_service.py
back/app/: main.py  models.py  schemas.py
back/app/api/v1/: api.py  dependencies.py
back/app/api/v1/endpoints/: analytics.py  auth.py  connectors.py  knowledge.py  public.py  query.py  tools.py  workspaces.py
back/app/core/: config.py  database.py  security.py
back/app/services/: ai_client.py
front/: .dockerignore  Dockerfile  nginx.conf  package.json  vite.config.js
front/public/: index.html
front/src/: App.jsx  index.css  main.jsx
front/src/api/: api.js
front/src/components/: Modal.jsx  ProtectedRoute.jsx  StatCard.jsx
front/src/context/: AuthContext.jsx
front/src/layouts/: Header.jsx  WorkspaceLayout.jsx
front/src/pages/: DashboardPage.jsx  LoginPage.jsx  WorkspaceDetailPage.jsx
front/src/pages/workspace/: WorkspaceAnalytics.jsx  WorkspaceChat.jsx  WorkspaceKnowledge.jsx  WorkspaceSettings.jsx  WorkspaceTickets.jsx
